added: Phase 0 and Phase 1

--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,11 @@
     "name": "oseughu/svelte-starter-kit",
     "type": "project",
     "description": "A laravel starter kit built with svelte 5, inertia 2 and shadcn-svelte",
-    "keywords": [
-        "laravel",
-        "framework"
-    ],
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "filament/filament": "^4.0",
         "inertiajs/inertia-laravel": "^2.0.10",
         "laravel/framework": "^12.34.0",
         "laravel/tinker": "^2.10.1",
@@ -41,7 +39,8 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
