--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
         "@rollup/rollup-linux-x64-gnu": "4.52.4",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.1.14",
         "lightningcss-linux-x64-gnu": "^1.30.2"
+    },
+    "dependencies": {
+        "chart.js": "^4.5.1"
     }
 }
